--- a/Themes/Dexxed/fontImport.css
+++ b/Themes/Dexxed/fontImport.css
@@ -4,5 +4,5 @@
     font-style: normal;
     font-weight: 400;
     font-stretch: normal;
-    src: url('https://github.com/LuSaffi/VenCordstuff/raw/refs/heads/main/Fonts/pokemon-b-w.otf.woff2') format('woff2');
+    src: url(https://github.com/LuSaffi/VenCordstuff/raw/refs/heads/main/Fonts/pokemon-b-w.otf.woff2) format('woff2');
   }
